# hog.torch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ffi.lua  hog-scm-1.rockspec  hog.lua  init.lua  utils.lua
lib/: CMakeLists.txt  hog.cu  hog.h
