CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
SET(HOG_INSTALL_LIB_SUBDIR "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
SET(HOG_INSTALL_INCLUDE_SUBDIR "${Torch_INSTALL_INCLUDE_SUBDIR}")
CMAKE_POLICY(VERSION 2.8)

IF(NOT HOG_INSTALL_LIB_SUBDIR)
  SET(HOG_INSTALL_LIB_SUBDIR "lib" CACHE PATH "HOG install library directory")
ENDIF()

FILE(GLOB src-cuda *.cu)

CUDA_ADD_LIBRARY(hog MODULE ${src-cuda})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(hog THC TH ${CUDA_cusparse_LIBRARY})

INSTALL(TARGETS hog LIBRARY DESTINATION ${HOG_INSTALL_LIB_SUBDIR})
